--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,1 +1,15 @@
 // 한글 영어 폰트 다르게 하기
+
+.img-link {
+  display: block;
+}
+
+figcaption {
+  color: #545454;
+  text-align: center;
+  font-size: 0.95rem;
+}
+
+.post-navigation p {
+  font-size: 1rem;
+}
